fix: correct reveal effect causing horizontal scroll

--- a/webdev/styles.css
+++ b/webdev/styles.css
@@ -313,6 +313,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  overflow: hidden;
 }
 
 .section-generic__text {
